--- a/data_top/kids.html
+++ b/data_top/kids.html
@@ -192,19 +192,19 @@
                 <img src="../data_top/images/madai_1.jpg" alt="マダイ">
                 <h2 class="fish-name">マダイ（真鯛）</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd>からだが赤くて、<ruby>背中<rt>せなか</rt></ruby>の青いキラキラした点々がおしゃれ！大人になると、この青い点々は少なくなるよ。尾ビレの後ろが黒いことや、<ruby>背中<rt>せなか</rt></ruby>のヒレがきれいな形をしているのも目印だよ！</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道から<ruby>九州<rt>きゅうしゅう</rt></ruby>まで、日本のいろいろな海にいて、<ruby>韓国<rt>かんこく</rt></ruby>や<ruby>台湾<rt>たいわん</rt></ruby>の近くにも住んでいるよ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>海の中の<ruby>岩場<rt>いわば</rt></ruby>や<ruby>砂<rt>すな</rt></ruby>があるところ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>春から<ruby>初夏<rt>しょか</rt></ruby>にかけて（4月〜6月くらい）。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>4月から12月くらいまで。特に6月にはたくさん<ruby>獲<rt>と</rt></ruby>れるよ！</dd>
                 </dl>
             </article>
@@ -213,19 +213,19 @@
                 <img src="../data_top/images/chidai_1.jpg" alt="チダイ">
                 <h2 class="fish-name">チダイ（血鯛）</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd>マダイに<ruby>似<rt>に</rt></ruby>ているけど、少し<ruby>違<rt>ちが</rt></ruby>うよ。エラのふちが赤くて、まるで血がついているみたいに見えるから、この名前がついたんだ！からだはピンク色と銀色っぽく、<ruby>背中<rt>せなか</rt></ruby>のヒレが長いよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道の南から<ruby>九州<rt>きゅうしゅう</rt></ruby>までの海や、<ruby>瀬戸内海<rt>せとないかい</rt></ruby>にもいるよ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>海の底の<ruby>岩場<rt>いわば</rt></ruby>や<ruby>砂利<rt>じゃり</rt></ruby>があるところ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>秋（9月〜11月くらい）。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>春の終わりから秋にかけて。特に9月〜10月にはたくさん<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                 </dl>
             </article>
@@ -234,19 +234,19 @@
                 <img src="../data_top/images/hedai_1.jpg" alt="ヘダイ">
                 <h2 class="fish-name">ヘダイ（平鯛）</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd>体は銀色で、横から見ると平べったい形をしているよ。若い魚はヒレが黄色っぽいのが<ruby>特徴<rt>とくちょう</rt></ruby>。体が平たいことや、 口が「へ」の字に見えることが名前の<ruby>由来<rt>ゆらい</rt></ruby>と言われているよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>日本の広い<ruby>範囲<rt>はんい</rt></ruby>の海にいるよ。遠くのアフリカやオーストラリアの海にも<ruby>仲間<rt>なかま</rt></ruby>がいるんだ！</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>海岸に近い<ruby>岩場<rt>いわば</rt></ruby>や、波が<ruby>穏<rt>おだ</rt></ruby>やかな<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>春の終わりから夏の初めにかけて。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>4月から9月くらいまで。夏が終わるとあまり見かけなくなるよ。</dd>
                 </dl>
             </article>
@@ -255,19 +255,19 @@
                 <img src="../data_top/images/mutsu_1.jpg" alt="ムツ">
                 <h2 class="fish-name">ムツ</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd>大人は金色っぽい茶色で、子供は少し金色をしているよ。しっぽのふちが黒っぽいのが<ruby>特徴<rt>とくちょう</rt></ruby>だよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道から<ruby>九州<rt>きゅうしゅう</rt></ruby>までの日本の海に広く住んでいるよ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>子供のころは浅い海にいるけど、大人はとても深い<ruby>岩場<rt>いわば</rt></ruby>へ<ruby>引<rt>ひ</rt></ruby>っ<ruby>越<rt>こ</rt></ruby>すよ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>秋から春にかけて。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>4月ごろに、子供のムツがたくさん<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                 </dl>
             </article>
@@ -276,19 +276,19 @@
                 <img src="../data_top/images/maaji_2.jpg" alt="マアジ">
                 <h2 class="fish-name">マアジ（真鯵）</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd>体の中央に「ゼイゴ」と呼ばれる<ruby>硬<rt>かた</rt></ruby>いトゲトゲのウロコが一列に<ruby>並<rt>なら</rt></ruby>んでいるのが<ruby>特徴<rt>とくちょう</rt></ruby>。お刺身やフライでおなじみの魚だよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道から<ruby>九州<rt>きゅうしゅう</rt></ruby>まで、日本の海ならどこにでもいるよ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>海の真ん中から底の方を泳いでいるよ。子供のアジは岸の近くや<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>に入ってくることがあるんだ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>場所によって違うけど、水温が暖かくなる春から夏にかけて<ruby>卵<rt>たまご</rt></ruby>を産むよ。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>4月から11月くらいまで。4月には子供のマアジがたくさん<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                 </dl>
             </article>
@@ -297,19 +297,19 @@
                 <img src="../data_top/images/kaiwari_1.jpg" alt="カイワリ">
                 <h2 class="fish-name">カイワリ</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd><ruby>背中<rt>せなか</rt></ruby>は青っぽくて、お<ruby>腹<rt>なか</rt></ruby>は銀色に光っているよ。ヒレが少し黄色いのも<ruby>特徴<rt>とくちょう</rt></ruby>。子供のころは体に6〜8本のしま<ruby>模様<rt>もよう</rt></ruby>があるけど、大きくなると消えちゃうよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>北海道より南の日本の海や、もっと南の暖かい海にもいるよ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd><ruby>砂<rt>すな</rt></ruby>や<ruby>泥<rt>どろ</rt></ruby>がある海の底によくいるよ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>暖かい<ruby>季節<rt>きせつ</rt></ruby>（5月〜11月くらい）。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>6月から9月くらい。特に6月によく<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                 </dl>
             </article>
@@ -318,19 +318,19 @@
                 <img src="../data_top/images/konoshiro_1.jpg" alt="コノシロ">
                 <h2 class="fish-name">コノシロ</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd><ruby>背中<rt>せなか</rt></ruby>のヒレの後ろが糸のように長く<ruby>伸<rt>の</rt></ruby>びていることや、体の横に黒い点々が<ruby>並<rt>なら</rt></ruby>んでいるのが目印！お寿司の「コハダ」は、この魚の子供なんだよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>日本の真ん中より南の海に住んでいるよ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>波が<ruby>静<rt>しず</rt></ruby>かな<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>が好きで、<ruby>卵<rt>たまご</rt></ruby>を産むときは川の水が<ruby>混<rt>ま</rt></ruby>ざる場所までやってくるよ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>春から夏の初めにかけて。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>4月から9月くらい。春や秋によく<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                 </dl>
             </article>
@@ -339,19 +339,19 @@
                 <img src="../data_top/images/kataboshi_1.jpg" alt="カタボシイワシ">
                 <h2 class="fish-name">カタボシイワシ（肩星鰯）</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd>体は平たくて細長いよ。エラの後ろに黒い点があるから「カタボシ」って名前がついたんだ。<ruby>新鮮<rt>しんせん</rt></ruby>なときはオレンジや黄色っぽく見えることもあるよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>日本の南の方や、もっと南の温かい海にたくさんいるよ。最近は少し北の海でも見つかるようになってきたんだ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>岸に近い海で、みんなで集まって泳いでいるよ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>はっきりとは分からないけど、6月〜7月ごろと言われているんだ。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>4月から9月くらい。特に6月にはとってもたくさん<ruby>獲<rt>と</rt></ruby>れるよ！</dd>
                 </dl>
             </article>
@@ -360,45 +360,45 @@
                 <img src="../data_top/images/gima_1.jpg" alt="ギマ">
                 <h2 class="fish-name">ギマ</h2>
                 <dl class="kids-details">
-                    <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                    <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                     <dd><ruby>背中<rt>せなか</rt></ruby>とお<ruby>腹<rt>なか</rt></ruby>に<ruby>鋭<rt>するど</rt></ruby>いトゲがあるから気をつけて！体は銀色で、ヒレはきれいな黄色をしているよ。ヌルヌルした<ruby>粘液<rt>ねんえき</rt></ruby>を出すこともあるよ。</dd>
 
-                    <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                    <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                     <dd>日本の南の方の海に住んでいるよ。</dd>
 
-                    <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                    <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                     <dd>岸に近い浅い海の底が好き。子供のころは川の水が<ruby>混<rt>ま</rt></ruby>ざる場所でも見つかるよ。</dd>
 
-                    <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>6月〜7月ごろ。<ruby>入<rt>い</rt></ruby>り<ruby>江<rt>え</rt></ruby>に入ってきて<ruby>卵<rt>たまご</rt></ruby>を産むよ。</dd>
 
-                    <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                    <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                     <dd>5月から7月くらい。5月には100匹以上も<ruby>獲<rt>と</rt></ruby>れることがあるよ！</dd>
                 </dl>
             </article>
 
 
             <section class="toxic-section">
-                <h2 class="toxic-title">⚠️ 毒がある魚たち</h2>
+                <h2 class="toxic-title">毒がある魚たち</h2>
                 <p class="toxic-warning">※さわらないでね！</p>
 
                 <article class="kids-card toxic">
                     <img src="../data_top/images/hakofugu_1.jpg" alt="ハコフグ">
                     <h2 class="fish-name">ハコフグ</h2>
                     <dl class="kids-details">
-                        <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                        <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                         <dd>名前の通り、体が四角い箱みたいな形をしているよ。大人は黒い点がないけど、子供は体に黒い水玉<ruby>模様<rt>もよう</rt></ruby>があってとてもかわいい！でも<ruby>皮膚<rt>ひふ</rt></ruby>に毒があるから気をつけてね。</dd>
 
-                        <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                        <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                         <dd>北海道から<ruby>九州<rt>きゅうしゅう</rt></ruby>まで、日本のいろいろな海にいるよ。</dd>
 
-                        <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                        <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                         <dd>波が<ruby>静<rt>しず</rt></ruby>かな浅い海が好きだよ。</dd>
 
-                        <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>春から夏にかけて。</dd>
 
-                        <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>5月から11月くらい。6月〜7月によく見つかるよ。</dd>
                     </dl>
                 </article>
@@ -407,19 +407,19 @@
                     <img src="../data_top/images/setomino_1.jpg" alt="セトミノカサゴ">
                     <h2 class="fish-name">セトミノカサゴ</h2>
                     <dl class="kids-details">
-                        <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                        <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                         <dd>ヒレが大きくてヒラヒラしていて、とても<ruby>豪華<rt>ごうか</rt></ruby>に見える魚だよ。でも、ヒレのトゲには強い毒があるから絶対にさわっちゃダメ！胸のヒレを広げると、きれいな青い<ruby>模様<rt>もよう</rt></ruby>が見えるよ。</dd>
 
-                        <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                        <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                         <dd>日本の温かい海に住んでいるよ。</dd>
 
-                        <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                        <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                         <dd>少し深い海の底の<ruby>砂<rt>すな</rt></ruby>地にいるよ。</dd>
 
-                        <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>まだよく分かっていなくて、<ruby>謎<rt>なぞ</rt></ruby>が多い魚なんだ。</dd>
 
-                        <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>7月から10月くらい。秋になるとよく見かけるようになるよ。</dd>
                     </dl>
                 </article>
@@ -428,19 +428,19 @@
                     <img src="../data_top/images/moyou_1.jpg" alt="モヨウフグ">
                     <h2 class="fish-name">モヨウフグ</h2>
                     <dl class="kids-details">
-                        <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                        <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                         <dd>お<ruby>腹<rt>なか</rt></ruby>に小さなトゲトゲがあるよ。子供のころはお<ruby>腹<rt>なか</rt></ruby>に黒い線があるけど、大人になると黒い<ruby>斑点<rt>はんてん</rt></ruby>がたくさん出てくるんだ。</dd>
 
-                        <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                        <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                         <dd>日本の広い<ruby>範囲<rt>はんい</rt></ruby>の海にいるよ。南の島のサンゴ<ruby>礁<rt>しょう</rt></ruby>にも住んでいるよ。</dd>
 
-                        <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                        <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                         <dd>岸に近い浅い<ruby>岩場<rt>いわば</rt></ruby>やサンゴの海が好きだよ。</dd>
 
-                        <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>まだよく分かっていないんだ。</dd>
 
-                        <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>5月から11月くらいまで、毎月少しずつ<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                     </dl>
                 </article>
@@ -449,19 +449,19 @@
                     <img src="../data_top/images/kitamakura_1.jpg" alt="キタマクラ">
                     <h2 class="fish-name">キタマクラ</h2>
                     <dl class="kids-details">
-                        <dt>👀 <ruby>特徴<rt>とくちょう</rt></ruby></dt>
+                        <dt><ruby>特徴<rt>とくちょう</rt></ruby></dt>
                         <dd>体は茶色っぽくて、横に2本の暗い色の線があるよ。名前に「北枕（きたまくら）」とついているのは、食べると死んでしまって「北枕」で寝かされることになる……という怖い意味があるからなんだ。絶対に食べちゃダメだよ！</dd>
 
-                        <dt>🌏 <ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
+                        <dt><ruby>分布域<rt>ぶんぷいき</rt></ruby></dt>
                         <dd>日本のあちこちの海にいるよ。南の島にもたくさんいるんだ。</dd>
 
-                        <dt>🏠 <ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
+                        <dt><ruby>生息環境<rt>せいそくかんきょう</rt></ruby></dt>
                         <dd><ruby>岩場<rt>いわば</rt></ruby>やサンゴ<ruby>礁<rt>しょう</rt></ruby>など、<ruby>隠<rt>かく</rt></ruby>れられる場所が好きだよ。</dd>
 
-                        <dt>🥚 <ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>産卵<rt>さんらん</rt></ruby><ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>夏ごろとされているよ。</dd>
 
-                        <dt>📅 <ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
+                        <dt><ruby>獲<rt>と</rt></ruby>れる<ruby>時期<rt>じき</rt></ruby></dt>
                         <dd>7月から9月くらい。真夏の8月によく<ruby>獲<rt>と</rt></ruby>れるよ。</dd>
                     </dl>
                 </article>
